@@ -26,7 +26,7 @@ public final class LoadedCategory extends AbstractCategory {
     @Override
     public @NotNull Component getDisplayName(@NotNull Player viewer) {
         var result = this.displayNameMap.get(viewer.locale());
-        if (result == null) result = this.displayNameMap.get(new Locale(viewer.locale().getLanguage()));
+        if (result == null) result = this.displayNameMap.get(Locale.of(viewer.locale().getLanguage()));
         return Component.text(result != null ? result : this.displayNameMap.getOrDefault(null, "Unknown"));
     }
 
